# rogue-like

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: CppLint.cmake
assets/maps/: level-random  level1  level2  level3
assets/stats/: top_scores_default  win_screen_stats
include/: constants.h
include/game/: Coin.h  CoinsManager.h  Controls.h  Food.h  FoodManager.h  HoodRender.h  Player.h
include/lib/ecs/: component.h  engine.h  entity.h  entity_manager.h  system.h  system_manager.h
include/lib/math/: to_pos.h  vec2.h
include/lib/scenes/: context.h  i_scene.h  scene_manager.h
include/lib/utils/: controls.h  ignore_entity.h
include/rogue/colors/: colors.h  red.h
include/rogue/components/: action_component.h  breakable_component.h  coin_component.h  collider_component.h  cost_component.h  damage_component.h  durability_component.h  hp_component.h  item_component.h  lift_ability_component.h  movement_component.h  name_component.h  player_control_component.h  removability_component.h  rigid_body.h  rigid_body_component.h  stomach_component.h  takeable_component.h  texture_component.h  transform_component.h  wallet_component.h
include/rogue/entity-filters/: filters.h
include/rogue/maps/: first_map  level1  level2
include/rogue/math/: Rand.h
include/rogue/scenes/: game_over_scene.h  game_scene.h  title_scene.h  win_scene.h
include/rogue/systems/: ability_control_system.h  action_system.h  attack_system.h  collision_system.h  control_system.h  damage_system.h  enemy_vision_system.h  entity_deletion_system.h  floor_traps_system.h  game_over_system.h  hud_render_system.h  level_transition_system.h  marionette_system.h  move_control_system.h  movement_system.h  player_food_system.h  player_indicators_system.h  player_rigid_collisions_system.h  rendering_system.h  rigid_collisions_system.h  statistic_system.h  take_coin_system.h  take_food_system.cpp  take_food_system.h  take_medicine_system.h  take_trap_system.h  (+2 more)
include/utils/: game-math.h
src/: constants.cpp  main.cpp
src/game/: Coin.cpp  CoinsManager.cpp  Controls.cpp  Food.cpp  FoodManager.cpp  Player.cpp
src/lib/: scene_manager.cpp
src/utils/: game-math.cpp
(+102 files in other folders)
